--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
     }
   ],
   "require": {
+    "php": ">=5.4"
+  },
+  "require-dev": {
+    "php": ">=5.4"
   },
   "autoload": {
     "psr-4": {
